--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "^16.0.8",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "firebase": "^10.7.1"  <-- ADD THIS LINE
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
