--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.6.0",
+    "lucide-react": "^0.561.0",
     "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0"
